# Jack---Thesis

./: README.md  test.csv
kinova_movo_test/: .setup_assistant  CMakeLists.txt
kinova_movo_test/config/: fake_controllers.yaml  gazebo_movo.urdf  joint_limits.yaml  kinematics.yaml  movo.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
kinova_movo_test/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
movo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
movo_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  movo.srdf  ompl_planning.yaml  stomp_planning.yaml
movo_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  (+13 more)
mrn_movo/: CMakeLists.txt  package.xml  setup.py
mrn_movo/data/: data_transformed.csv  test.csv  test_1.csv  test_jack_1_saved.csv  test_jack_2.csv  test_jack_2_saved.csv  test_jack_3_saved.csv  test_jack_5_saved.csv  test_miguel_1_saved.csv  test_miguel_2_saved.csv  test_miguel_3_saved.csv  test_miguel_4_saved.csv  test_miguel_5_saved.csv  test_sami_1.csv
mrn_movo/data/backup/: test_jack_2_saved.csv  test_jack_4_saved.csv
mrn_movo/launch/: mrn_movo.launch
mrn_movo/msg/: ChestCompensationRequest.msg  ChestCompensationResponse.msg  KinovaMoveResponse.msg
mrn_movo/src/mrn_movo/: PointCloudVisualisation.py  baseToKinect.py  chest_publisher.py  csv_output.py  get_bio_ik_movo.py  get_chest_compensation_client.py  get_chest_compensation_server.py  get_ik_left_arm_client.py  get_ik_left_arm_server.py  listener.py  offset_publisher.py  output_openpose.py  pointToIK.py  send_movement_client.py  send_movement_server.py  state_machine.py  test.csv  test.py  wrist_publisher.py
mrn_movo/src/mrn_movo/op_movo_publishers/: op_chest_approxtime.py  op_elbow_left_approxtime.py  op_elbow_right_approxtime.py  op_shoulder_left_approxtime.py  op_shoulder_right_approxtime.py  op_wrist_left_approxtime.py  op_wrist_right_approxtime.py
mrn_movo/srv/: Get_Chest_Compensation.srv  Get_IK.srv  KinovaMoveService.srv
mrn_movo/urdf/: movo.urdf  movo.urdf.xacro
mrn_movo/urdf/movo_components/: movo_base.urdf  movo_body.urdf
openpose_ros/: CMakeLists.txt  package.xml
(+11 files in other folders)
